--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Age Calculator</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  <div class="bubble"></div>
+  
+  <h1 class="heading">🎂 Age Calculator 🎉</h1>
+
+  <div class="calculator">
+    <div class="display" id="display">Your Age</div>
+    <input type="date" id="birthdate" placeholder="Enter your birth date">
+    <button onclick="calculateAge()">Calculate Age</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
